--- a/CPass/CPass.csproj
+++ b/CPass/CPass.csproj
@@ -53,6 +53,12 @@
     <Compile Include="OpenScreen.Designer.cs">
       <DependentUpon>OpenScreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="PassGen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PassGen.Designer.cs">
+      <DependentUpon>PassGen.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vault.cs">
@@ -63,6 +69,9 @@
     </Compile>
     <EmbeddedResource Include="OpenScreen.resx">
       <DependentUpon>OpenScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PassGen.resx">
+      <DependentUpon>PassGen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
