--- a/CPass/CPass.csproj
+++ b/CPass/CPass.csproj
@@ -50,6 +50,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account.cs" />
+    <Compile Include="AddAccount.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddAccount.Designer.cs">
+      <DependentUpon>AddAccount.cs</DependentUpon>
+    </Compile>
     <Compile Include="Hashing.cs" />
     <Compile Include="OpenScreen.cs">
       <SubType>Form</SubType>
@@ -71,6 +77,9 @@
     <Compile Include="Vault.Designer.cs">
       <DependentUpon>Vault.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AddAccount.resx">
+      <DependentUpon>AddAccount.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="OpenScreen.resx">
       <DependentUpon>OpenScreen.cs</DependentUpon>
     </EmbeddedResource>
