--- a/CPass/CPass.csproj
+++ b/CPass/CPass.csproj
@@ -56,6 +56,12 @@
     <Compile Include="AddAccount.Designer.cs">
       <DependentUpon>AddAccount.cs</DependentUpon>
     </Compile>
+    <Compile Include="EditAccount.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditAccount.Designer.cs">
+      <DependentUpon>EditAccount.cs</DependentUpon>
+    </Compile>
     <Compile Include="Hashing.cs" />
     <Compile Include="OpenScreen.cs">
       <SubType>Form</SubType>
@@ -79,6 +85,9 @@
     </Compile>
     <EmbeddedResource Include="AddAccount.resx">
       <DependentUpon>AddAccount.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditAccount.resx">
+      <DependentUpon>EditAccount.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OpenScreen.resx">
       <DependentUpon>OpenScreen.cs</DependentUpon>
